--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "audit": "0.0.6",
     "bootstrap-social": "^5.1.1",
+    "cross-fetch": "^3.0.4",
     "fix": "0.0.6",
     "font-awesome": "^4.7.0",
     "react": "^16.13.1",
