--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/react-transition-group": "^4.4.0",
     "audit": "0.0.6",
     "bootstrap-social": "^5.1.1",
     "cross-fetch": "^3.0.4",
